Test_files/invalidTestCases/Underflow_push16.avm
push int16(-20000000)
exit
